Add swagger description for the others endpoints, implement UserCreateDto
