# src/controller/controller_interface.go
@@ -7,6 +7,6 @@ import (
 
 type AuthController interface {
 	GenerateToken(req *models.AuthRequest) (*models.AuthResponse, *custom_error.AppError)
-	SaveUser(req models.User) (*models.User, *custom_error.AppError)
+	SaveUser(req models.UserCreateDto) (*models.UserDto, *custom_error.AppError)
 	GetUserByToken(tokenString string) (*models.UserDto, *custom_error.AppError)
 }
