# src/models/dto.go
@@ -7,3 +7,7 @@ type UserDto struct {
 	Email        string
 	RefreshToken string
 }
+type UserCreateDto struct {
+	Password string `gorm:"type:varchar(255);not null"`
+	Email    string `gorm:"uniqueIndex;not null"`
+}
